# crac-client-web

./: README.md  app.py  pyproject.toml
crac_client_web/: app.py  config.ini  gui.py  gui_constants.py  jobs.py  loc.py  logging.conf
crac_client_web/converter/: button_converter.py  converter.py  curtains_converter.py  roof_converter.py  telescope_converter.py  weather_converter.py
crac_client_web/retriever/: button_retriever.py  curtains_retriever.py  retriever.py  roof_retriever.py  telescope_retriever.py  weather_retriever.py
crac_client_web/static/: style.css
crac_client_web/static/js/: gauges.js
crac_client_web/templates/: index.html
locales/: base.pot
locales/it/LC_MESSAGES/: base.mo  base.po
